change swagger urls on device methods
