# docs/swagger.json
@@ -12,7 +12,7 @@
     },
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/devices/": {
+        "/devices/": {
             "get": {
                 "description": "get mobile devices",
                 "consumes": [
@@ -52,7 +52,7 @@
                 }
             }
         },
-        "/api/v1/devices/rent/{device_id}": {
+        "/devices/rent/{device_id}": {
             "get": {
                 "description": "rent device",
                 "consumes": [
@@ -96,7 +96,7 @@
                 }
             }
         },
-        "/api/v1/devices/return/{device_id}": {
+        "/devices/return/{device_id}": {
             "get": {
                 "description": "return device",
                 "consumes": [
