# internal/device/handler.go
@@ -43,7 +43,7 @@ func (h *handler) Routes() chi.Router {
 // @Param        os    query     string  false  "os"
 // @Success      200   {array}   device.RentingDeviceResponse "OK"
 // @Failure      500   {object}  apperror.HttpError "Internal server error"
-// @Router       /api/v1/devices/ [get]
+// @Router       /devices/ [get]
 func (h *handler) getMobileDevices(w http.ResponseWriter, r *http.Request) error {
 	tr := otel.Tracer("GetMobileDevices")
 	ctx, span := tr.Start(h.ctx, "handler-GetMobileDevices")
@@ -75,7 +75,7 @@ func (h *handler) getMobileDevices(w http.ResponseWriter, r *http.Request) error
 // @Success      200   {object}   device.RentingDeviceResponse "OK"
 // @Failure      400   {object}  apperror.HttpError "User input error, see error detail"
 // @Failure      500   {object}  apperror.HttpError "Internal server error"
-// @Router       /api/v1/devices/rent/{device_id} [get]
+// @Router       /devices/rent/{device_id} [get]
 func (h *handler) rentDevice(w http.ResponseWriter, r *http.Request) error {
 	tr := otel.Tracer("RentDevice")
 	ctx, span := tr.Start(h.ctx, "handler-RentDevice")
@@ -112,7 +112,7 @@ func (h *handler) rentDevice(w http.ResponseWriter, r *http.Request) error {
 // @Success      200   {object}   device.RentingDeviceResponse "OK"
 // @Failure      400   {object}  apperror.HttpError "User input error, see error detail"
 // @Failure      500   {object}  apperror.HttpError "Internal server error"
-// @Router       /api/v1/devices/return/{device_id} [get]
+// @Router       /devices/return/{device_id} [get]
 func (h *handler) returnDevice(w http.ResponseWriter, r *http.Request) error {
 	tr := otel.Tracer("ReturnDevice")
 	ctx, span := tr.Start(h.ctx, "handler-ReturnDevice")
